- fixed bug with wrong objective sense output for transformed problem. The transformed problem is always a minimization
  problem!
- fixed numerical issue in linear constraint propagation: need slightly more aggressive tightening such that probing does
  not choose a wrong value for fixing inside an epsilon interval
- fixed bug with objective scaling after restart
- fixed bug with wrong 'tightened' return value of some of the change bounds methods


SCIP version 1.00
=================

compiling:
- added .exe extension to binaries of MinGW
- added "LPS=none" for compiling SCIP without a LP solver
- modified the default LP solver to be SoPlex instead of CPLEX
- removed the ".static" extension associated to the LINK variable from the Makefile system
  (If you want to build makefiles for shared library generation, use the OPT variable. For example,
  you could create a makefile "make/make.linux.x86.gnu.opt-shared" and compile it with "make OPT=opt-shared".)
- added version numbers to library files
  (There will be a softlink generated in the lib/ and bin/ directories without version number that
  point to the latest compiled version.)
- made ZIMPL=true the default; if you do not want to include ZIMPL support, call "make ZIMPL=false"

interface:
- new callback method SCIPdialogFree()
- new method SCIPreadSol()
- new method SCIPgetVarRedcost()
- new method SCIPnodeUpdateLowerboundLP()
- linear and knapsack constraint handler may now deal with coefficients of value zero
- parameters are now separated into basic and advanced, the latter ones have been moved to extra submenus
- new method SCIPwriteMIP()
- calling SCIPwriteLP is now possible in Solved Stage
- new parameter "maxbounddist" for SCIPincludeSepa() and constructor ObjSepa()
- new method SCIPsepaGetMaxbounddist()
- removed parameter "branchdir" from SCIPbranchVar()
- new parameters "leftchild", "eqchild", and "downchild" for SCIPbranchVar()
- new method SCIPcalcNodeselPriority()