@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_rens.c,v 1.11 2007/06/06 11:25:17 bzfpfend Exp $"
+#pragma ident "@(#) $Id: heur_rens.c,v 1.12 2008/02/26 12:32:03 bzfwanie Exp $"
 
 /**@file   heur_rens.c
  * @brief  RENS primal heuristic
@@ -369,18 +369,24 @@ SCIP_RETCODE SCIPapplyRens(
    /* if there is already a solution, add an objective cutoff */
    if( SCIPgetNSols(scip) > 0 )
    {
+      SCIP_Real upperbound;
       cutoff = SCIPinfinity(scip);
       assert( !SCIPisInfinity(scip,SCIPgetUpperbound(scip)) );   
-      
-      if( !SCIPisInfinity(scip,SCIPgetLowerbound(scip)) )
+
+      upperbound = SCIPgetUpperbound(scip) - SCIPsumepsilon(scip);
+
+      if( !SCIPisInfinity(scip,-1.0*SCIPgetLowerbound(scip)) )
       {
-         SCIP_Real upperbound;
-         cutoff = (1-minimprove)*SCIPgetUpperbound(scip) - minimprove*SCIPgetLowerbound(scip);
-         upperbound = SCIPgetUpperbound(scip) - SCIPsumepsilon(scip);
-         cutoff = MIN(upperbound, cutoff );
+         cutoff = (1-minimprove)*SCIPgetUpperbound(scip) + minimprove*SCIPgetLowerbound(scip);
       }
       else
-         cutoff = SCIPgetUpperbound(scip) - SCIPsumepsilon(scip);
+      {
+         if ( SCIPgetUpperbound ( scip ) >= 0 )
+            cutoff = ( 1 - minimprove ) * SCIPgetUpperbound ( scip );
+         else
+            cutoff = ( 1 + minimprove ) * SCIPgetUpperbound ( scip );
+      }
+      cutoff = MIN(upperbound, cutoff);
       SCIP_CALL( SCIPsetObjlimit(subscip, cutoff) );
    }
 
