@@ -83,6 +83,7 @@ fixed bugs:
 - fixed numerical issue in linear constraint propagation: need slightly more aggressive tightening such that probing does
   not choose a wrong value for fixing inside an epsilon interval
 - fixed bug with objective scaling after restart
+- fixed bug with useless objective cutoff in LNS heuristics
 - fixed bug with wrong 'tightened' return value of some of the change bounds methods
 
 
